# single-player-pong-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
single_player_pong_python/: main.py
single_player_pong_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_single_player_pong_python.py
