[tool.poetry]
name = "single-player-pong-python"
version = "0.1.0"
description = ""
authors = ["Jarl André Hübenthal <jarl.andre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
