[tool.poetry]
name = "single-player-pong-python"
version = "0.1.0"
description = ""
authors = ["Jarl André Hübenthal <jarl.andre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.761"
pre-commit = "^1.21.0"

[tool.poetry.scripts]
game = "single_player_pong_python.main:__main__"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
